Fix typo in import comment for numpy

--- a/Diwali Sales Analysis.ipynb
+++ b/Diwali Sales Analysis.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np  # Fro Array\n",
+    "import numpy as np  # For Array\n",
     "import pandas as pd # For Dataframes\n",
     "import matplotlib.pyplot as plt # For Visualization\n",
     "%matplotlib inline \n",
